--- a/.github/workflows/linux_x86.yml
+++ b/.github/workflows/linux_x86.yml
@@ -1,6 +1,7 @@
 name: libwifi (Linux) (64-Bit)
 
-on: [push, pull_request]
+on:
+  workflow_dispatch:
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
